# AutoPerf

./: .gitignore  AutoPerf_Architecture_Bible_v3.md  README.md  pyproject.toml
docs/: INSTALL.md
scripts/: setup.ps1  setup.py  setup.sh  start-worker.py
src/autoperf/: __init__.py  adapters.py  adb.py  analyzer.py  cli.py  collectors.py  models.py  runner.py  screen_stream.py  storage.py  workers.py
src/autoperf/scenarios/: coords.py  youtube.py
tests/: test_adapters.py  test_adb.py  test_analyzer.py  test_cli.py  test_collectors_errors.py  test_core.py  test_models.py  test_runner.py  test_scenarios_coords.py  test_scenarios_youtube.py  test_screen_stream.py  test_storage.py  test_workers.py
webapp/config/: celery.py  settings.py  urls.py
webapp/dashboard/: apps.py  services.py  tasks.py  tests.py  urls.py  views.py
webapp/frontend/: index.html  package-lock.json  package.json  vite.config.js
webapp/frontend/src/: App.vue  api.js  i18n.js  main.js  router.js  theme.css
webapp/frontend/src/components/: Card.vue  DeltaBar.vue  DeviceMoodBadge.vue  LiveScreenPanel.vue  MetricChart.vue  MiniSparkline.vue  PassRateBar.vue  StatusBadge.vue  Toast.vue
webapp/frontend/src/composables/: useDeviceScreen.js
webapp/frontend/src/locales/: en.js  zh-TW.js
webapp/frontend/src/views/: DeviceScreenView.vue  JoinView.vue  MissionControlView.vue  QueueView.vue  RunDetailView.vue  RunListView.vue  StatsView.vue
webapp/livescreen/: server.py  tests.py
