[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autoperf"
version = "0.1.0"
description = "Offline-first Android performance test framework"
requires-python = ">=3.11"

[project.scripts]
autoperf = "autoperf.cli:main"

[project.optional-dependencies]
dev = ["pytest>=9,<10"]
dashboard = ["django>=5.0,<6"]
worker = ["celery>=5.3,<6", "redis>=5.0,<6"]
livescreen = ["websockets>=13,<14"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
